--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -7,7 +7,7 @@ embedded = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products,read_orders,read_assigned_fulfillment_orders,read_merchant_managed_fulfillment_orders,read_third_party_fulfillment_orders,write_assigned_fulfillment_orders,write_merchant_managed_fulfillment_orders,write_third_party_fulfillment_orders,read_customers"
+scopes = "read_orders,read_customers,write_pixels,read_customer_events"
 
 [auth]
 redirect_urls = [
