update to sync with gitlab

--- a/shopify.app.profit-peak-ads-track.toml
+++ b/shopify.app.profit-peak-ads-track.toml
@@ -1,8 +1,8 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 name = "profit-peak-ads-track"
-client_id = "7f5ef12910c4558659a3d1ffd0902ef7"
-application_url = "https://d74a-45-61-160-167.ngrok-free.app"
+client_id = "a60fb14ccd719f994afbe826f24976b5"
+application_url = "https://trailpixel.serveo.net"
 embedded = true
 
 [access_scopes]
@@ -11,9 +11,9 @@ scopes = "read_orders,read_customers,write_pixels,read_customer_events"
 
 [auth]
 redirect_urls = [
-  "https://d74a-45-61-160-167.ngrok-free.app/auth/callback",
-  "https://d74a-45-61-160-167.ngrok-free.app/auth/shopify/callback",
-  "https://d74a-45-61-160-167.ngrok-free.app/api/auth/callback"
+  "https://trailpixel.serveo.net/auth/callback",
+  "https://trailpixel.serveo.net/auth/shopify/callback",
+  "https://trailpixel.serveo.net/api/auth/callback"
 ]
 
 [webhooks]
